Bug 404913 - Discover should show a error message if don't have Internet connection on installing
Summary: Discover should show a error message if don't have Internet connection on ins...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.15.2
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
: 404235 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-02-28 16:10 UTC by Rubén Gómez Antolí
Modified: 2019-04-17 16:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot with the error message (338.81 KB, image/png)
2019-04-17 16:41 UTC, Aleix Pol
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rubén Gómez Antolí 2019-02-28 16:10:41 UTC
Trying to install something with no Internet access, Discover simply don't do anything (install button go grey and return back green) and user should be annoyed.

STEPS TO REPRODUCE
1. Disconnect Internet
2. Try to install something

EXPECTED RESULT

Perhaps a simply message with "No Internet access" or something similar should be sufficient.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 5.15.2
(available in About System)
KDE Plasma Version: 5.15.2
KDE Frameworks Version:  5.55.0
Qt Version: 5.12.0
Comment 1 Aleix Pol 2019-03-07 00:31:17 UTC
Git commit 13557f71e486b5711d1bd686526a88b5219adf9e by Aleix Pol.
Committed on 07/03/2019 at 00:28.
Pushed by apol into branch 'Plasma/5.15'.

flatpak: Report errors when running a transaction

M  +3    -0    libdiscover/backends/FlatpakBackend/FlatpakTransactionThread.cpp

https://commits.kde.org/discover/13557f71e486b5711d1bd686526a88b5219adf9e
Comment 2 Nate Graham 2019-03-08 22:50:49 UTC
That commit only affects Flatpak transactions and only results in an error being printed to the console, not anywhere in the UI. If I navigate to a Flatpak app, disable the network connection, and click "Install", nothing happens in the UI, even though the following is printed to the console:

flatpak-Message: 15:44:52.382: Error updating remote metadata for 'flathub': Error resolving “dl.flathub.org”: Temporary failure in name resolution

That's not a particularly user-friendly error message, but displaying it in the UI would be better than doing nothing. Even better would be substituting a user-friendly string.
Comment 3 Aleix Pol 2019-03-11 15:45:25 UTC
I'm pretty sure I did get a passive notification, which then is the front-end responsibility to manage.
Comment 4 Nate Graham 2019-03-11 15:52:52 UTC
Hmm, I didn't see one when I tried this out.
Comment 5 Aleix Pol 2019-04-17 16:41:28 UTC
Created attachment 119462 [details]
screenshot with the error message
Comment 6 Aleix Pol 2019-04-17 16:42:02 UTC
As shown in the screenshot.
Comment 7 Aleix Pol 2019-04-17 16:42:48 UTC
*** Bug 404235 has been marked as a duplicate of this bug. ***