flatpak: Report errors when running a transaction

BUG: 404913